[package]
name = "nxfr-push"
# 0.0.x versions are used for dev pushes.
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive", "env"] }
color-eyre = { version = "0.6.2", default-features = false, features = [ "track-caller", "issue-url", "tracing-error", "capture-spantrace", "color-spantrace" ] }
graphql_client = { version = "0.13.0" }
tokio = { version = "1.21.0", default-features = false, features = ["time", "io-std", "process", "fs", "signal", "tracing", "rt-multi-thread", "macros", "io-util", "parking_lot" ] }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls-native-roots", "stream", "socks", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
gix = { version = "0.46.0", features = ["async-network-client", "serde"] }
gix-ref = { version = "0.30.0", features = ["serde"] }
tar = { version = "0.4.38", features = ["xattr"] }
flate2 = "1.0.26"
tempfile = "3.6.0"
ring = "0.16.20"
base64 = "0.21.2"
tracing = { version = "0.1.36", default-features = false, features = [ "std", "attributes" ] }
tracing-error = { version = "0.2.0", default-features = false, features = ["traced-error"] }
tracing-subscriber = { version = "0.3.15", default-features = false, features = [ "std", "registry", "fmt", "json", "ansi", "env-filter" ] }
atty = { version = "0.2.14", default-features = false }
